# boi_apkscan

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_RULES.md  PRD.md  README.md  RESEARCH.md  RISKS.md  TASKS.md  TEST_PLAN.md  docker-compose.yml  progress.md  pyproject.toml  seed_db.py  tokens.css
.gsd/: ARCHITECTURE.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md
.hallmark/: log.json  preflight.json
apkscan/: __init__.py  cli.py  config.py  pipeline.py
apkscan/api/: __init__.py  deps.py  main.py  routes_auth.py  routes_samples.py  schemas.py  ui.py
apkscan/attack/: __init__.py  mapping.py  techniques.py
apkscan/audit/: __init__.py  logger.py
apkscan/auth/: __init__.py  security.py  service.py
apkscan/db/: __init__.py  base.py  models.py
apkscan/dynamic_analysis/: __init__.py  base.py  client.py  factory.py  simulator.py
apkscan/genai/: __init__.py  chunking.py  grounding.py  interpreter.py  llm_client.py  prompt.py  rag.py
apkscan/ingestion/: __init__.py  hashing.py  service.py
apkscan/integration/: __init__.py  export.py
apkscan/jobs/: __init__.py  celery_app.py  persistence.py  submit.py  tasks.py
apkscan/reporting/: __init__.py  builder.py  json_report.py  pdf_report.py
apkscan/schema/: __init__.py  artifacts.py  evidence.py  features.py  genai.py  report.py
apkscan/scoring/: __init__.py  fusion.py  ml_drift.py  ml_encoder.py  ml_explainer.py  ml_loader.py  ml_monitor.py  ml_trainer.py  policy.py  rule_engine.py  weights.py
apkscan/static/: index.html  landing.html  login.html  report.html
apkscan/storage/: __init__.py  (+4 more)
docker/: Dockerfile.web  Dockerfile.worker
tests/: conftest.py  test_api.py  test_attack.py  test_cli.py  test_config.py  test_fusion.py  test_genai.py  test_ingestion.py  test_jobs.py  test_ml_drift.py  test_ml_encoder.py  test_ml_explainer.py  test_ml_loader.py  test_ml_monitor.py  test_ml_trainer.py  test_mobsf_client.py  test_pipeline.py  test_reporting.py  test_rule_scoring.py  test_sandbox_client.py  test_sandbox_pipeline.py  test_schema.py  test_static_extraction.py
(+29 files in other folders)
